--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URL= mongodb+srv://Business-Top:BusinessTOP2024@cluster0.8a1ap.mongodb.net/Business-Top?retryWrites=true&w=majority
-JWT_Secret='moneyispaperwhichfulfillallneeds'
+MONGO_URL="mongodb+srv://Business-Top:BusinessTOP2024@cluster0.8a1ap.mongodb.net/Business-Top?retryWrites=true&w=majority"
+JWT_SECRET='moneyispaperwhichfulfillallneeds'
 PORT=5000
